# sky_scapade

./: .gitignore  Cargo.toml  Cross.toml  azure-pipelines.yml  build.rs  plan.md
.cargo/: config.toml
.github/workflows/: build.yml
assets/: glider.glb  hollow_cylinder.mtl  platform.mtl
src/: camera.rs  discord.rs  generate.rs  input.rs  main.rs  menu.rs  settings.rs  skills.rs  system_info.rs  upgrades.rs
src/skills/: dash.rs  glide.rs  jump.rs
