[package]
name = "new_game_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2"}
bevy_diagnostic = "0.13.2"
bevy_ecs ="0.13.2"
sysinfo="0.30.11"
bevy_framepace = {version="0.15.0", default-features = false}
#bevy_screen_diagnostics = "0.5.0"
iyes_perf_ui = "0.2.3"
#bevy-parallax = "0.8.0"
#bevy_lunex="0.0.11"
bevy_obj = "0.13"
rand = "0.8.5"
rand_chacha = "0.3.1"
splines = "4.3.1"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }
leafwing-input-manager = "0.13.3"
bevy-tnua-rapier3d = "0.6.0"
bevy-tnua = "0.17.0"
bevy_embedded_assets = "0.10.2"
cosiest_noisiest ={path = "../cosiest_noisiest"}
base64 = "0.22.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
