[package]
name = "sky_scapade"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13",features = ["mp3"]}
bevy_diagnostic = "0.13"
bevy_ecs ="0.13"
sysinfo="0.30"
bevy_framepace = {version="0.15", default-features = false}
#bevy_lunex="0.0.11"
bevy_rapier3d = { version = "0.26", features = [ "simd-stable", "debug-render-3d" ] }
bevy-tnua-rapier3d = "0.6"
bevy-tnua = "0.18"
bevy_obj = "0.13"
bevy-persistent = { version = "0.5", features = ["toml"] }
bevy_mod_taa = {git = "https://github.com/DGriffin91/bevy_mod_taa.git",optional = true}
bevy_embedded_assets = "0.10"
bevy_simple_text_input = "0.7.0"
leafwing-input-manager = "0.13"

rand = "0.8"
rand_chacha = "0.3"
splines = "4.3"
cosiest_noisiest = "0.1.1"
strum ={version = "0.26",features = ["derive"]}
serde = { version = "1", features = ["derive"] }
dirs = "5.0"
discord-rich-presence = "0.2"
toml = "0.8"

[build-dependencies]
dotenvy = "0.15.7"

[features]
#default= ["bevy_mod_taa"]

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
incremental = false
panic = "abort"
split-debuginfo = "off"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
